bazel build of keycloak docker image now contains correct files
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/keycloak-service-providers/BUILD
+++ b/keycloak-service-providers/BUILD
@@ -1,3 +1,5 @@
+package(default_visibility = ["//visibility:public"])
+
 java_binary(
     name = "spi",
     srcs = glob(["src/main/java/**/*.java"]),
