--- a/keycloak-service-providers/pom.xml
+++ b/keycloak-service-providers/pom.xml
@@ -33,6 +33,11 @@
             <version>${keycloak.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.keycloak</groupId>
+            <artifactId>keycloak-model-jpa</artifactId>
+            <version>${keycloak.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.jboss.logging</groupId>
             <artifactId>jboss-logging</artifactId>
             <version>3.3.1.Final</version>
@@ -41,6 +46,11 @@
             <groupId>com.chargebee</groupId>
             <artifactId>chargebee-java</artifactId>
             <version>2.4.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.spec.javax.ws.rs</groupId>
+            <artifactId>jboss-jaxrs-api_2.0_spec</artifactId>
+            <version>1.0.1.Final</version>
         </dependency>
         <dependency>
             <groupId>org.keycloak</groupId>
