--- a/keycloak-service-providers/pom.xml
+++ b/keycloak-service-providers/pom.xml
@@ -83,6 +83,8 @@
                     <artifactSet>
                         <excludes>
                             <exclude>org.keycloak:*</exclude>
+                            <exclude>dom4j:*</exclude>
+                            <exclude>antlr:*</exclude>
                         </excludes>
                     </artifactSet>
                     <filters>
