--- a/keycloak/themes/haven/login/theme.properties
+++ b/keycloak/themes/haven/login/theme.properties
@@ -1,9 +1,9 @@
 parent=base
 
-styles=css/material-components-web.min.css css/haven.css
+styles=css/material.min.css css/haven.css
 
 chargebee_styles=
 
-scripts=js/material-components-web.min.js 
+scripts=js/material.min.js 
 
 chargebee_scripts=js/jquery.js js/chargebee.js
