This fixes permission denied when running `dc run flyway`
I don't know whether it will run correctly in OpenShift,
need to test there.

Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/flyway/Dockerfile
+++ b/flyway/Dockerfile
@@ -6,5 +6,5 @@ WORKDIR /home/havenuser
 ADD         sql/* /flyway/sql/
 ENV         ENV_VERBOSITY 无
 ENV         HOME /home/havenuser
-RUN chown -R havenuser:havenuser /home/havenuser && chgrp -R 0 /home/havenuser && chmod -R g=u /home/havenuser
+RUN chown -R havenuser:havenuser /flyway && chgrp -R 0 /flyway && chmod -R g=u /flyway
 USER havenuser
