--- a/havenapi/Gopkg.toml
+++ b/havenapi/Gopkg.toml
@@ -23,11 +23,11 @@
 
 [[constraint]]
   name = "github.com/gobuffalo/buffalo"
-  version = "0.10.1"
+  version = "0.12.4"
 
 [[constraint]]
   name = "github.com/gobuffalo/envy"
-  version = "1.3.0"
+  version = "1.6.3"
 
 [[constraint]]
   branch = "master"
@@ -42,8 +42,8 @@
   name = "github.com/markbates/grift"
 
 [[constraint]]
-  name = "github.com/markbates/pop"
-  version = "3.41.1"
+  name = "github.com/buffalo/pop"
+  version = "4.6.3"
 
 [[constraint]]
   branch = "master"
@@ -55,12 +55,12 @@
 
 [[constraint]]
   name = "github.com/gobuffalo/packr"
-  version = "1.9.0"
+  version = "1.12.1"
 
 [[constraint]]
   name = "gopkg.in/square/go-jose.v1"
-  version = "1.1.0"
+  version = "1.1.2"
 
 [[constraint]]
   name = "gopkg.in/square/go-jose.v2"
-  version = "2.1.3"
+  version = "2.1.7"
