Refactor to add needed env vars for havenapi.
Adding needed env vars to access keycloak admin api.

Issue #HAV-120

Signed-off-by: Christopher Mundus <chris@kindlyops.com>

--- a/k8s/havenapi-deployment.yaml
+++ b/k8s/havenapi-deployment.yaml
@@ -34,6 +34,17 @@ spec:
                   key: password
             - name: HAVEN_JWK_PATH
               value: "/etc/haven-credentials/jwk.json"
+            - name: KC_HOST
+              value: "http://webui"
+            - name: KC_PORT
+              value: "8443"
+            - name: KC_ADMIN
+              value: "admin"
+            - name: KC_PW
+              valueFrom:
+                secretKeyRef:
+                  name: haven-database-credentials
+                  key: password
           volumeMounts:
             - name: secret-volume
               mountPath: /etc/haven-credentials/
