Refactor to use https in host url.
Signed-off-by: Christopher Mundus <chris@kindlyops.com>

--- a/k8s/havenapi-deployment.yaml
+++ b/k8s/havenapi-deployment.yaml
@@ -35,7 +35,7 @@ spec:
             - name: HAVEN_JWK_PATH
               value: "/etc/haven-credentials/jwk.json"
             - name: KC_HOST
-              value: "http://webui"
+              value: "https://webui"
             - name: KC_PORT
               value: "8443"
             - name: KC_ADMIN
