Remove extraneous groups, attributes, and realm roles.
Standardize default client role == member for havendev.
Clean up users attributes.
Adjust postgrest claim-key to read havendev client role to
find role to assume in postgrest.

Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/postgrest/config
+++ b/postgrest/config
@@ -23,6 +23,8 @@ server-proxy-uri = "$(PGRST_SERVER_PROXY_URI)"
 jwt-secret = "@$(HAVEN_JWK_PATH)"
 jwt-aud = "$(PGRST_JWT_AUD_CLAIM)"
 
+role-claim-key = ".resource_access.havendev.roles[0]"
+
 # secret-is-base64 = false
 
 ## limit rows in response
