--- a/havenapi/Gopkg.toml
+++ b/havenapi/Gopkg.toml
@@ -52,3 +52,7 @@
 [[constraint]]
   name = "gopkg.in/square/go-jose.v2"
   version = "2.1.7"
+
+  [[constraint]]
+  name = "github.com/rs/cors"
+  version = "1.3.0"
