--- a/webui/package.json
+++ b/webui/package.json
@@ -32,6 +32,7 @@
     "eslint": "^4.1.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
+    "html-webpack-exclude-assets-plugin": "0.0.7",
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.3",
     "minimist": "1.2.0",
