--- a/webui/Caddyfile
+++ b/webui/Caddyfile
@@ -7,6 +7,22 @@ redir 301 {
   / https://{host}{uri}
 }
 
+header / {
+  # Enable HTTP Strict Transport Security (HSTS) to force clients to always
+  # connect via HTTPS (do not use if only testing)
+  Strict-Transport-Security: "max-age=31536000; includeSubDomains"
+  # Enable cross-site filter (XSS) and tell browser to block detected attacks
+  X-XSS-Protection "1; mode=block"
+  # Prevent some browsers from MIME-sniffing a response away from the declared Content-Type
+  X-Content-Type-Options "nosniff"
+  # Disallow the site to be rendered within a frame (clickjacking protection)
+  X-Frame-Options "DENY"
+  # CSP
+  Content-Security-Policy "'none'; script-src 'self'; connect-src 'self'; img-src 'self'; style-src 'self';"
+  Feature-Policy "autoplay 'none'; camera 'none'; microphone 'none'; midi 'none'; usb 'none'; vr 'none';"
+  Referrer-Policy "strict-origin"
+}
+
 proxy /auth keycloak:8080 {
   transparent
 }
