--- a/webui/Caddyfile
+++ b/webui/Caddyfile
@@ -18,7 +18,7 @@ header / {
   # Disallow the site to be rendered within a frame (clickjacking protection)
   X-Frame-Options "DENY"
   # CSP
-  Content-Security-Policy "'none'; script-src 'self'; connect-src 'self'; img-src 'self'; style-src 'self';"
+  Content-Security-Policy "default-src 'none'; script-src 'self'; connect-src 'self'; img-src 'self' data: www.gravatar.com; style-src 'self' 'unsafe-inline'; font-src 'self' data: ;"
   Feature-Policy "autoplay 'none'; camera 'none'; microphone 'none'; midi 'none'; usb 'none'; vr 'none';"
   Referrer-Policy "strict-origin"
 }
