--- a/webui/Caddyfile
+++ b/webui/Caddyfile
@@ -16,7 +16,7 @@ header / {
   # Prevent some browsers from MIME-sniffing a response away from the declared Content-Type
   X-Content-Type-Options "nosniff"
   # Disallow the site to be rendered within a frame (clickjacking protection)
-  X-Frame-Options "DENY"
+  X-Frame-Options "sameorigin"
   # CSP
   Content-Security-Policy "default-src 'self'; img-src 'self' data: www.gravatar.com; style-src 'self' 'unsafe-inline';  font-src 'self' data: ;"
   Feature-Policy "autoplay 'none'; camera 'none'; microphone 'none'; midi 'none'; usb 'none'; vr 'none';"
