--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,16 @@ services:
       - MH_MAILDIR_PATH=/maildir
     volumes:
       - ./mailhog/maildir:/maildir
+  faktory:
+    image: contribsys/faktory:0.9.0-beta1
+    ports:
+      - "7420:7420"
+    environment:
+      - FAKTORY_PASSWORD=fassword
+      - production
+    volumes:
+      - ./faktory-data:/var/lib/faktory
+    command: /faktory -b 0.0.0.0:7419 -w 0.0.0.0:7420 
   keycloak:
     depends_on:
       - start_dependencies
