Removed Material Icons CDN
Material Icons loads locally!
Also removed useless material-componenets css/js that I missed when switching over to material.
Signed-off-by: Lauren Behan <lauren.caitlan@gmail.com>

--- a/keycloak/themes/haven/login/theme.properties
+++ b/keycloak/themes/haven/login/theme.properties
@@ -1,6 +1,6 @@
 parent=base
 
-styles=css/material.min.css css/haven.css css/google-fonts.css
+styles=css/material.min.css css/haven.css css/google-fonts.css css/material-icons.css
 
 chargebee_styles=
 
