Refactor to use proper host and port for keycloak.
Adjusts the KC_HOST and KC_PORT env vars to the correct
entries so that the api can connect.

Issue #HAV-120

Signed-off-by: Christopher Mundus <chris@kindlyops.com>

--- a/k8s/havenapi-deployment.yaml
+++ b/k8s/havenapi-deployment.yaml
@@ -35,9 +35,9 @@ spec:
             - name: HAVEN_JWK_PATH
               value: "/etc/haven-credentials/jwk.json"
             - name: KC_HOST
-              value: "https://webui"
+              value: "https://havenweb"
             - name: KC_PORT
-              value: "8443"
+              value: "443"
             - name: KC_ADMIN
               value: "admin"
             - name: KC_PW
