Fix spelling of flyway migration job.
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/k8s/flyway-migration-job.yaml
+++ b/k8s/flyway-migration-job.yaml
@@ -2,7 +2,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: flywy-migrate
+  name: flyway-migrate
 spec:
   parallelism: 1
   completions: 1
