Refactor to add faktory to havenapi.
Now sends background jobs to faktory.

Issue #HAV-133

Signed-off-by: Christopher Mundus <chris@kindlyops.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -159,11 +159,13 @@ services:
       - KC_PW=admin
       - KC_HOST=http://webui
       - KC_PORT=2016
+      - FAKTORY_URL=tcp://:fassword@faktory:7419
     build:
       context: .
       dockerfile: ./havenapi/Dockerfile-hotreload
     links:
       - db
+      - faktory
     ports:
       - "3000:3000"
   webui:
