--- a/havenapi/Gopkg.toml
+++ b/havenapi/Gopkg.toml
@@ -56,3 +56,7 @@
   [[constraint]]
   name = "github.com/rs/cors"
   version = "1.3.0"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/contribsys/faktory"
