--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -8,7 +8,7 @@ WORKDIR $GOPATH/src/github.com/kindlyops/mappamundi/worker
 ADD . .
 RUN go get -u github.com/golang/dep/cmd/dep
 RUN dep ensure -vendor-only
-
+RUN dep ensure -add github.com/kindlyops/mappamundi/havenapi/keycloak
 RUN go build -o app main.go
 
 FROM havengrc-docker.jfrog.io/kindlyops/reporter:latest
