Refactor to update worker go deps.
Issue #HAV-133

Signed-off-by: Christopher Mundus <chris@kindlyops.com>

--- a/worker/Gopkg.toml
+++ b/worker/Gopkg.toml
@@ -32,3 +32,7 @@
 [[constraint]]
   branch = "master"
   name = "github.com/contribsys/faktory_worker_go"
+
+[[constraint]]
+  branch = "HAV-133"
+  name = "github.com/kindlyops/mappamundi"
