Refactor to update Go Deps.
Issue #HAV-133

Signed-off-by: Christopher Mundus <chris@kindlyops.com>

--- a/worker/Gopkg.toml
+++ b/worker/Gopkg.toml
@@ -38,7 +38,7 @@
   name = "github.com/jmoiron/sqlx"
 
 [[constraint]]
-  branch = "HAV-133"
+  branch = "master"
   name = "github.com/kindlyops/mappamundi"
 
 [[constraint]]
