--- a/havenapi/Gopkg.toml
+++ b/havenapi/Gopkg.toml
@@ -60,3 +60,7 @@
 [[constraint]]
   name = "github.com/contribsys/faktory"
   version = "0.9.0-beta1-1"
+
+[[constraint]]
+  branch = "master"
+  name = "go.uber.org/ratelimit"
