--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -142,7 +142,7 @@ jobs:
       - add_ssh_keys
       - setup_remote_docker:
           docker_layer_caching: true
-      - run: docker build --rm=false -t kindlyops/havenworker worker
+      - run: docker build --rm=false -t kindlyops/havenworker -f worker/Dockerfile .
       - run: docker tag kindlyops/havenworker:latest kindlyops/havenworker:$CIRCLE_SHA1
       - run: docker tag kindlyops/havenworker:latest kindlyops/havenworker:$CIRCLE_BUILD_NUM
       - run: docker login -u $DOCKER_USER -p $DOCKER_PASS
