--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -11,7 +11,7 @@ RUN go get -u github.com/golang/dep/cmd/dep
 RUN dep ensure -vendor-only
 RUN go build -o app main.go
 
-FROM havengrc-docker.jfrog.io/kindlyops/reporter:latest
+FROM kindlyops/reporter:latest
 LABEL maintainer="Kindly Ops, LLC <support@kindlyops.com>"
 RUN useradd -ms /bin/bash havenuser && chown -R havenuser:havenuser /home/havenuser
 WORKDIR /home/havenuser
