--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 postgresql-data/*
 mailhog/*
 docs/node_modules/*
+worker/output/*
 webui/node_modules/*
 webui/public/node_modules/*
 webui/elm-stuff/*
