--- a/webui/Caddyfile
+++ b/webui/Caddyfile
@@ -36,6 +36,10 @@ proxy /api/files havenapi:3000 {
   transparent
 }
 
+proxy /api/registration_funnel havenapi:3000 {
+  transparent
+}
+
 # this rewrite makes it so anything we are not proxying to api or auth
 # is rewritten to index.html, so that the SPA is served. This is necessary
 # to support path-based-routing in a single page application in cases where
