Adding new mjml container for mjml builds.
Can now run docker-compose run mjml to
build all template files in the template
folder. They will be output to dist.

Issue #HAV-191

Signed-off-by: Christopher Mundus <chris@kindlyops.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -253,3 +253,10 @@ services:
       context: .
       dockerfile: ./docs/plantuml/Dockerfile
     command: [-v, /docs/plantuml/*.puml]
+  mjml:
+    build:
+      context: mjml/
+    volumes:
+      - ./mjml/templates:/home/mjml/templates
+      - ./mjml/dist:/home/mjml/dist
+    command: ["templates/*.mjml", "-o", "dist/"]
