--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,15 +63,14 @@ services:
     volumes:
       - ./mailhog/maildir:/maildir
   faktory:
-    image: contribsys/faktory:0.9.0-beta1
+    image: contribsys/faktory:0.9.0
     ports:
       - "7420:7420"
     environment:
       - FAKTORY_PASSWORD=fassword
-      - production
     volumes:
       - ./faktory-data:/var/lib/faktory
-    command: /faktory -b 0.0.0.0:7419 -w 0.0.0.0:7420 
+    command: /faktory -b 0.0.0.0:7419 -w 0.0.0.0:7420 -e production
   keycloak:
     depends_on:
       - start_dependencies
