Make faktory scheduler container that runs as non-root
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,7 +63,8 @@ services:
     volumes:
       - ./mailhog/maildir:/maildir
   faktory:
-    image: contribsys/faktory:0.9.0
+    build:
+      context: ./faktory
     ports:
       - "7420:7420"
     environment:
