--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -145,10 +145,16 @@ jobs:
       - run: docker build --rm=false -t kindlyops/havenworker -f worker/Dockerfile .
       - run: docker tag kindlyops/havenworker:latest kindlyops/havenworker:$CIRCLE_SHA1
       - run: docker tag kindlyops/havenworker:latest kindlyops/havenworker:$CIRCLE_BUILD_NUM
+      - run: docker build --rm=false -t kindlyops/faktory -f faktory/Dockerfile .
+      - run: docker tag kindlyops/faktory:latest kindlyops/faktory:$CIRCLE_SHA1
+      - run: docker tag kindlyops/faktory:latest kindlyops/faktory:$CIRCLE_BUILD_NUM
       - run: docker login -u $DOCKER_USER -p $DOCKER_PASS
       - run: docker push kindlyops/havenworker:$CIRCLE_BUILD_NUM
       - run: docker push kindlyops/havenworker:$CIRCLE_SHA1
       - run: docker push kindlyops/havenworker:latest
+      - run: docker push kindlyops/faktory:$CIRCLE_BUILD_NUM
+      - run: docker push kindlyops/faktory:$CIRCLE_SHA1
+      - run: docker push kindlyops/faktory:latest
       - run:
           name: notify failed job
           command: ./notify-slack notifications "CircleCI pipeline for ${CIRCLE_PULL_REQUEST:-$CIRCLE_BRANCH} failed in $CIRCLE_JOB $CIRCLE_BUILD_URL" circleci
