Don't run worker binary as root (OpenShift)
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -20,5 +20,5 @@ COPY --from=builder /go/src/github.com/kindlyops/mappamundi/worker/app .
 COPY --from=builder /go/src/github.com/kindlyops/mappamundi/worker/compilereport .
 RUN chown -R havenuser:havenuser /home/havenuser
 RUN chgrp -R 0 /home/havenuser &&chmod -R g=u /home/havenuser
-
+USER havenuser
 CMD exec /home/havenuser/app
