Shrink reporter image from 6GB to 1.7GB by dropping custom font
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/worker/docker-build/Dockerfile
+++ b/worker/docker-build/Dockerfile
@@ -1,10 +1,10 @@
 FROM  havengrc-docker.jfrog.io/rocker/rstudio:3.4.3
 LABEL maintainer="Kindly Ops, LLC <support@kindlyops.com>"
 
-RUN apt-get update \
-    && apt-get install -y zlib1g-dev libproj-dev texlive-full fonts-roboto texlive-fonts-extra xzdec gnupg \
-    && tlmgr init-usertree
-RUN tlmgr install roboto
+# RUN apt-get update \
+#     && apt-get install -y zlib1g-dev libproj-dev texlive-full fonts-roboto texlive-fonts-extra xzdec gnupg \
+#     && tlmgr init-usertree
+# RUN tlmgr install roboto
 RUN install2.r --deps=TRUE remotes
 RUN install2.r --deps=TRUE tinytex
 RUN install2.r --deps=TRUE formatR
