--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,12 @@
-version: 2
+version: 2.1
+commands:
+  notify-failed:
+    description: "Slack notification of failed job"
+    steps:
+      - run:
+          name: notify failed job
+          command: ./notify-slack notifications "CircleCI pipeline for ${CIRCLE_PULL_REQUEST:-$CIRCLE_BRANCH} failed in $CIRCLE_JOB $CIRCLE_BUILD_URL" circleci
+          when: on_fail
 jobs:
   webui-build-job:
     docker:
@@ -54,10 +62,7 @@ jobs:
       - run: docker push kindlyops/havenweb:$CIRCLE_SHA1
       - run: docker push kindlyops/havenweb:$CIRCLE_BUILD_NUM
       - run: docker push kindlyops/havenweb:latest
-      - run:
-          name: notify failed job
-          command: ./notify-slack notifications "CircleCI pipeline for ${CIRCLE_PULL_REQUEST:-$CIRCLE_BRANCH} failed in $CIRCLE_JOB $CIRCLE_BUILD_URL" circleci
-          when: on_fail
+      - notify-failed
   flyway-build-job:
     docker:
       - image: circleci/openjdk:9
@@ -73,10 +78,8 @@ jobs:
       - run: docker push kindlyops/havenflyway:$CIRCLE_SHA1
       - run: docker push kindlyops/havenflyway:$CIRCLE_BUILD_NUM
       - run: docker push kindlyops/havenflyway:latest
-      - run:
-          name: notify failed job
-          command: ./notify-slack notifications "CircleCI pipeline for ${CIRCLE_PULL_REQUEST:-$CIRCLE_BRANCH} failed in $CIRCLE_JOB $CIRCLE_BUILD_URL" circleci
-          when: on_fail
+      - notify-failed
+
   postgrest-build-job:
     docker:
       - image: circleci/openjdk:9
@@ -92,10 +95,7 @@ jobs:
       - run: docker push kindlyops/postgrest:$CIRCLE_SHA1
       - run: docker push kindlyops/postgrest:$CIRCLE_BUILD_NUM
       - run: docker push kindlyops/postgrest:latest
-      - run:
-          name: notify failed job
-          command: ./notify-slack notifications "CircleCI pipeline for ${CIRCLE_PULL_REQUEST:-$CIRCLE_BRANCH} failed in $CIRCLE_JOB $CIRCLE_BUILD_URL" circleci
-          when: on_fail
+      - notify-failed
   keycloak-build-job:
     docker:
       - image: circleci/openjdk:9
@@ -111,10 +111,7 @@ jobs:
       - run: docker push kindlyops/keycloak:$CIRCLE_SHA1
       - run: docker push kindlyops/keycloak:$CIRCLE_BUILD_NUM
       - run: docker push kindlyops/keycloak:latest
-      - run:
-          name: notify failed job
-          command: ./notify-slack notifications "CircleCI pipeline for ${CIRCLE_PULL_REQUEST:-$CIRCLE_BRANCH} failed in $CIRCLE_JOB $CIRCLE_BUILD_URL" circleci
-          when: on_fail
+      - notify-failed
   havenapi-build-job:
     docker:
       - image: circleci/node:7-browsers
@@ -130,10 +127,7 @@ jobs:
       - run: docker push kindlyops/havenapi:$CIRCLE_BUILD_NUM
       - run: docker push kindlyops/havenapi:$CIRCLE_SHA1
       - run: docker push kindlyops/havenapi:latest
-      - run:
-          name: notify failed job
-          command: ./notify-slack notifications "CircleCI pipeline for ${CIRCLE_PULL_REQUEST:-$CIRCLE_BRANCH} failed in $CIRCLE_JOB $CIRCLE_BUILD_URL" circleci
-          when: on_fail
+      - notify-failed
   havenworker-build-job:
     docker:
       - image: circleci/node:7-browsers
@@ -155,10 +149,7 @@ jobs:
       - run: docker push kindlyops/faktory:$CIRCLE_BUILD_NUM
       - run: docker push kindlyops/faktory:$CIRCLE_SHA1
       - run: docker push kindlyops/faktory:latest
-      - run:
-          name: notify failed job
-          command: ./notify-slack notifications "CircleCI pipeline for ${CIRCLE_PULL_REQUEST:-$CIRCLE_BRANCH} failed in $CIRCLE_JOB $CIRCLE_BUILD_URL" circleci
-          when: on_fail
+      - notify-failed
   havenapi-testing-job:
     docker:
       - image: circleci/ruby:2.4
@@ -225,10 +216,7 @@ jobs:
             docker run --network net0 jwilder/dockerize  -wait tcp://api:8180 -timeout 2m
             docker run --volumes-from configs --network net0 -e KC_ADMIN=admin -e KC_PW=admin -e KC_HOST=http://keycloak -e KC_PORT=8080 -e TEST_DATABASE_URL -e HAVEN_JWK_PATH kindlyops/havenapitest /go/bin/buffalo test
             docker run --volumes-from configs --network net0 -e API_SERVER -e AUTH_SERVER --workdir /usr/src/app kindlyops/apitest cucumber
-      - run:
-          name: notify failed job
-          command: ./notify-slack notifications "CircleCI pipeline for ${CIRCLE_PULL_REQUEST:-$CIRCLE_BRANCH} failed in $CIRCLE_JOB $CIRCLE_BUILD_URL" circleci
-          when: on_fail
+      - notify-failed
   deploy-staging:
     docker:
       - image: circleci/ruby:2.4
@@ -256,10 +244,7 @@ jobs:
             oc set image deployment/havenweb havenweb=havengrc-docker.jfrog.io/kindlyops/havenweb:$CIRCLE_SHA1
             oc set image deployment/keycloak keycloak=havengrc-docker.jfrog.io/kindlyops/keycloak:$CIRCLE_SHA1
             oc set image deployment/worker   worker=kindlyops/havenworker:$CIRCLE_SHA1
-      - run:
-          name: notify failed job
-          command: ./notify-slack notifications "CircleCI pipeline for ${CIRCLE_PULL_REQUEST:-$CIRCLE_BRANCH} failed in $CIRCLE_JOB $CIRCLE_BUILD_URL" circleci
-          when: on_fail
+      - notify-failed
       - run:
           name: notify deploy complete
           command: ./notify-slack notifications "CircleCI completed deploy for ${CIRCLE_PULL_REQUEST:-$CIRCLE_BRANCH}" circleci
